# atm_controller

./: CMakeLists.txt  README.md
data/: bank_database.csv
include/: atm.h  bank.h
src/: atm.cpp  bank.cpp
tests/: check_balance.cpp  run_atm.cpp
